Fix contrast violation

--- a/packages/boxel/addon/components/boxel/tab-bar/index.css
+++ b/packages/boxel/addon/components/boxel/tab-bar/index.css
@@ -28,7 +28,7 @@
 }
 
 .boxel-tab-bar__item--is-inactive {
-  opacity: 0.45;
+  opacity: 0.5;
   cursor: text;
 }
 
